Made changes to the website

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,29 @@
-I'm David Udoeyop and this is my ITIS3135 First Course Page.
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+    <meta charset = "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles\default.css" rel="stylesheet" type="text/css" >
+     <title>
+       Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
+     </title>
+  </head>
+  <body>
+    <header>
+      <h1>Red Hot Bell Peppers</h1>
+    <div class="container">
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/index.html">Home</a> |
+
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">Tables</a> |
+
+      <a href="forms\forms.html">Forms</a> |
+
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">Contract</a> |
+
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">About me</a>
+    </div>
+    </header>
+
+  </body>
+</html>
