--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-I'm David Udoeyop and this is the root of my website.
+<html lang="en">
+<head>
+    <meta charset = "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="homecss.css" rel="stylesheet" type="text/css" >
+     <title>
+       Abasiubong David Udoeyop ITIS3135 ICE COLD Bell Peppers
+     </title>
+  </head> 
+  <body>
+  <div class="content">
+    <h1>ICE COLD BELL PEPPERS</h1>
+  </div>
+  </body>
+</html>
