--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -17,7 +17,7 @@
 
       <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">Tables</a> |
 
-      <a href="forms\forms.html">Forms</a> |
+      <a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a> |
 
       <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">Contract</a> |
 
