--- a/itis3135/tables/tables.html
+++ b/itis3135/tables/tables.html
@@ -1,1 +1,79 @@
-I'm David Udoeyop and this is my ITIS3135 First Course Page.
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+    <meta charset = "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../styles/tablestyle.css" rel="stylesheet" type="text/css" >
+    <link href="../styles/default.css" rel="stylesheet" type="text/css" >
+     <title>
+       Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
+     </title>
+  </head>
+  <body>
+    <header>
+      <h1>Red Hot Bell Peppers</h1>
+    <div class="container">
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/index.html">Home</a> |
+
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">Tables</a> |
+
+      <a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a> |
+
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">Contract</a> |
+
+      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">About me</a>
+    </div>
+    </header>
+
+    <h2>Html Tables</h2>
+
+    <br>
+    <h3>My Tabular Data</h3>
+        <ul class="list">
+            <li>Name: Dave Johnson, Age: 20, Year: Junior, Gender: M</li>
+            <li>Name: Samuel Jackson, Age: 21, Year: Senior, Gender: M</li>
+            <li>Name: Lisa Kudrow, Age: 18, Year: Freshman, Gender: F</li>
+            <li>Name: Phoebe Buffay, Age: 19, Year: Sophmore, Gender: F</li>
+        </ul>
+        <br>
+   <h3>Employee Data in simple table</h3>
+    <table>
+      <tr class="tr1">
+        <th> Name</th>
+        <th> Age</th>
+        <th> Year</th>
+        <th> Gender</th>
+      </tr>
+      <tr class="tr2">
+        <td>Dave Johnson</td>
+        <td>20</td>
+        <td>Junior</td>
+        <td>M</td>
+        
+      <tr class="tr2">
+        <td>Samuel Jackson</td>
+        <td>21</td>
+        <td>Senior</td>
+        <td>M</td>
+      </tr>
+
+      <tr class="tr2">
+        <td>Lisa Kudrow</td>
+        <td>18</td>
+        <td>Freshman</td>
+        <td>F</td>
+      </tr>
+
+      <tr class="tr2">
+        <td>Phoebe Buffay</td>
+        <td>19</td>
+        <td>Sophmore</td>
+        <td>F</td>
+      </tr>
+
+      </tr>
+    </table>
+
+  </body>
+</html>
