--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <head>
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="homecss.css" rel="stylesheet" type="text/css" >
+    <link href="stylesheet/homecss.css" rel="stylesheet" type="text/css" >
      <title>
        Abasiubong David Udoeyop ITIS3135 ICE COLD Bell Peppers
      </title>
   </head> 
   <body>
   <div class="content">
+    <img class="center" src="./img/santa.png" alt="a santa image">
     <h1>ICE COLD BELL PEPPERS</h1>
+    <h3>Click this <a class="course link" href="https://mavedave6.github.io/itis3135/index.html">link</a> to get redirected to my course page.<h3>
+    <h3>Merry Christmas!<h3>
+      
   </div>
   </body>
 </html>
