--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -11,19 +11,38 @@
   </head>
   <body>
     <header>
-      <h1>Red Hot Bell Peppers</h1>
-    <div class="container">
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/index.html">Home</a> |
+     <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+     <nav>
+      <ul>
+        <li><a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/index.html">Home</a></li>
 
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">Tables</a> |
+        <li><a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
 
-      <a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a> |
+        <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
 
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">Contract</a> |
+        <li><a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
 
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">About me</a>
-    </div>
+        <li><a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">Introduction</a></li>
+    </ul>
+    </nav>
     </header>
+    <main>
+     <h2>Welcome to my website!</h2>
+     <h2>It's that time of the year!</h2>
+  </main>
+
+   
+  <footer>
+   <a href="https://validator.w3.org/check?uri=referer"
+   id = "validation_link_html">
+    <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+   </a> 
+   <a href="https://jigsaw.w3.org/css-validator/check/referer"
+   id = "validation_link_css">
+    <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+   </a>
+   
+  </footer>
 
   </body>
 </html>
