--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset = "UTF-8">
@@ -11,8 +12,8 @@
   <div class="content">
     <img class="center" src="./img/santa.png" alt="a santa image">
     <h1>ICE COLD BELL PEPPERS</h1>
-    <h3>Click this <a class="course link" href="https://mavedave6.github.io/itis3135/index.html">link</a> to get redirected to my course page.<h3>
-    <h3>Merry Christmas!<h3>
+    <h3>Click this <a class="course link" href="https://mavedave6.github.io/itis3135/index.html">link</a> to get redirected to my course page.</h3>
+    <h3>Merry Christmas!</h3>
       
   </div>
   </body>
