--- a/itis3135/contract/contract.html
+++ b/itis3135/contract/contract.html
@@ -4,26 +4,29 @@
 <head>
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="styles\default.css" rel="stylesheet" type="text/css" >
+    <link href="../styles/default.css" rel="stylesheet" type="text/css" >
      <title>
        Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
      </title>
   </head>
-  <header>
-    <h1>
-      Red Hot Bell Peppers
-      </h1>
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/index.html">home</a> |
-
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">tables</a> |
-
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/forms/forms.html">forms</a> |
-
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">contract</a> |
-
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">about me</a>
-  </header>
+  
   <body>
+    <header>
+      <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+      <nav>
+       <ul>
+         <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
+ 
+         <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
+ 
+         <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
+ 
+         <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
+   
+          <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
+     </ul>
+     </nav>
+     </header>
         <main>
             <h2>Contract</h2>
             <p>I, <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">Udoeyop David</a> agree to abide by the terms of the course contract in my Fall 2023, ITIS 3135, Web Application Design and Development with instructor, Professor D.I. von Briesen.</p>
