--- a/itis3135/forms/forms.html
+++ b/itis3135/forms/forms.html
@@ -8,20 +8,21 @@
   </head>
   <body>
     <header>
-        <h1>Red Hot Bell Peppers</h1>
-      <div class="container">
-        <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/index.html">Home</a> |
+      <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+      <nav>
+       <ul>
+         <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
   
-        <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">Tables</a> |
+         <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
   
-        <a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a> |
+         <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
   
-        <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">Contract</a> |
+         <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
   
-        <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">About me</a>
-      </div>
-      </header>
-
+         <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
+     </ul>
+     </nav>
+     </header>
     <h3 id="description">Survey to figure out how many dogs are owned by the average human
     </h3>
     <form id="survey-form"> 
@@ -75,5 +76,17 @@
     </fieldset>
     <input type="submit" value="submit" id="submit"/>
     </form>
+    <footer>
+      <a href="https://validator.w3.org/check?uri=referer"
+      id = "validation_link_html">
+       <img src="../images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+      </a> 
+      <a href="https://jigsaw.w3.org/css-validator/check/referer"
+      id = "validation_link_css">
+       <img src="../images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+      </a>
+      
+     </footer>
+   
   </body>
 </html>
