--- a/itis3135/tables/tables.html
+++ b/itis3135/tables/tables.html
@@ -12,19 +12,21 @@
   </head>
   <body>
     <header>
-      <h1>Red Hot Bell Peppers</h1>
-    <div class="container">
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/index.html">Home</a> |
-
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/tables/tables.html">Tables</a> |
-
-      <a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a> |
-
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/contract/contract.html">Contract</a> |
-
-      <a href="file:///C:/Users/dudoeyop/Documents/itis3135_work/mavedave6.github.io/itis3135/introduction/introduction.html">About me</a>
-    </div>
-    </header>
+      <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+      <nav>
+       <ul>
+         <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
+  
+         <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
+  
+         <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
+  
+         <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
+  
+         <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
+     </ul>
+     </nav>
+     </header>
 
     <h2>Html Tables</h2>
 
@@ -74,6 +76,19 @@
 
       </tr>
     </table>
+
+    <footer>
+      <a href="https://validator.w3.org/check?uri=referer"
+      id = "validation_link_html">
+       <img src="../images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+      </a> 
+      <a href="https://jigsaw.w3.org/css-validator/check/referer"
+      id = "validation_link_css">
+       <img src="../images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+      </a>
+      
+     </footer>
+   
 
   </body>
 </html>
