work work work work work work

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -32,6 +32,7 @@
 
    
   <footer>
+      <a>createwithdavid.co</a>
    <a href="https://validator.w3.org/check?uri=referer"
    id = "validation_link_html">
     <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
