--- a/itis3135/createwithdavid.co/index.html
+++ b/itis3135/createwithdavid.co/index.html
@@ -132,8 +132,7 @@ footer{
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;            /* Footer height */
-
+  height: 2.5rem;
 }
 
 .img1,.img2{
