--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -20,7 +20,7 @@
         <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
 
         <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
-  
+
          <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
     </ul>
     </nav>
@@ -30,18 +30,18 @@
      <h2>It's that time of the year!</h2>
   </main>
 
-   
+
   <footer>
-      <a>createwithdavid.co</a>
+   <a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a>
    <a href="https://validator.w3.org/check?uri=referer"
    id = "validation_link_html">
     <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
-   </a> 
+   </a>
    <a href="https://jigsaw.w3.org/css-validator/check/referer"
    id = "validation_link_css">
     <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
    </a>
-   
+
   </footer>
 
   </body>
