--- a/itis3135/forms/forms.html
+++ b/itis3135/forms/forms.html
@@ -12,20 +12,22 @@
       <nav>
        <ul>
          <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-  
+
          <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
-  
+
          <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
-  
+
          <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
-  
+
          <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
+
+         <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
      </ul>
      </nav>
      </header>
     <h3 id="description">Survey to figure out how many dogs are owned by the average human
     </h3>
-    <form id="survey-form"> 
+    <form id="survey-form">
     <fieldset>
       <label for="name" id="name-label">
         Name : <input id="name" type="text" required placeholder="Enter your name"/>
@@ -62,7 +64,7 @@
       <br>
       <label for="about-dogs" name="about-dogs" id="about-dogs-label">Smug
           <input id="Smug" type="checkbox"  name="about-dogs" class="inline" value="1" />
-      
+
        <label for="about-dogs" name="about-dogs" id="about-dogs-label">Playful
           <input id="Playful" type="checkbox"  name="about-dogs" class="inline" value="2"/>
         </label>
@@ -72,7 +74,7 @@
           <br>
           <textarea id="additional-comments" name="additional-comments" rows="3" cols="30" placeholder="Where can I get more dogs..."></textarea>
         </label>
-  
+
     </fieldset>
     <input type="submit" value="submit" id="submit"/>
     </form>
@@ -80,13 +82,13 @@
       <a href="https://validator.w3.org/check?uri=referer"
       id = "validation_link_html">
        <img src="../images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
-      </a> 
+      </a>
       <a href="https://jigsaw.w3.org/css-validator/check/referer"
       id = "validation_link_css">
        <img src="../images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
       </a>
-      
+
      </footer>
-   
+
   </body>
 </html>
