--- a/itis3135/contract/contract.html
+++ b/itis3135/contract/contract.html
@@ -9,21 +9,23 @@
        Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
      </title>
   </head>
-  
+
   <body>
     <header>
       <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
       <nav>
        <ul>
          <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
- 
+
          <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
- 
+
          <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
- 
+
          <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
-   
+
           <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
+
+          <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
      </ul>
      </nav>
      </header>
@@ -35,7 +37,7 @@
             <p>I also understand that given the structure and content of this class, it's possible to find many examples online or even view my classmates' code directly. I swear that I will only use these resouces to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates</p>
             <p>Signed: <em>Udoeyop David</em>, 2/10/2022</p>
         </main>
-        
+
     </body>
 
 </html>
