--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -22,6 +22,8 @@
         <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
 
          <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
+
+         <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
     </ul>
     </nav>
     </header>
