--- a/itis3135/web-e.html
+++ b/itis3135/web-e.html
@@ -18,7 +18,7 @@
 
         <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
 
-        <li><a href="https://mavedave6.github.io/itis3135/introduction/introduction.html">Introduction</a></li>
+        <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
 
         <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
     </ul>
