--- a/itis3135/contract/contract.html
+++ b/itis3135/contract/contract.html
@@ -23,7 +23,7 @@
 
          <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
 
-          <li><a href="https://mavedave6.github.io/itis3135/Introduction/Introduction.html">Introduction</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
 
           <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
      </ul>
