--- a/itis3135/intro.html
+++ b/itis3135/intro.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../styles/default.css" rel="stylesheet" type="text/css" >
+  <link href="./styles/default.css" rel="stylesheet" type="text/css" >
   <title>
     Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
   </title>
@@ -23,7 +23,7 @@
 
              <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
 
-              <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
+             <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
 
               <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
          </ul>
