--- a/itis3135/intro.html
+++ b/itis3135/intro.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./styles/default.css" rel="stylesheet" type="text/css" >
+  <link href="styles/default.css" rel="stylesheet" type="text/css" >
   <title>
     Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
   </title>
@@ -31,7 +31,7 @@
          </header>
             <main>
                 <h2>Introduction</h2>
-                <img src="../images/me.jpg"  width="20%" height="20%" alt="Me"/>
+                <img src="images/me.jpg"  width="20%" height="20%" alt="Me"/>
                 <p>Picture of me not sleeping at work.</p>
                 <p>* PERSONAL: International Student from Nigeria majoring in computer science because I'm too "soft" for medicine.</p>
                 <p>* PROFESSIONAL : I am currently a junior with no professional experience outside personal projects and coursework. Otherwise known as an entrepreneur.</p>
