--- a/itis3135/intro.html
+++ b/itis3135/intro.html
@@ -31,7 +31,7 @@
          </header>
             <main>
                 <h2>Introduction</h2>
-                <img src="./images/me.jpg"  width="20%" height="20%" alt="Me"/>
+                <img src="images/me.jpg"  width="20%" height="20%" alt="Me"/>
                 <p>Picture of me not sleeping at work.</p>
                 <p>* PERSONAL: International Student from Nigeria majoring in computer science because I'm too "soft" for medicine.</p>
                 <p>* PROFESSIONAL : I am currently a junior with no professional experience outside personal projects and coursework. Otherwise known as an entrepreneur.</p>
