--- a/itis3135/createwithdavid.co/index.html
+++ b/itis3135/createwithdavid.co/index.html
@@ -4,16 +4,16 @@
         <meta charset = "UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>
-           CreateWithDavid
+           Firm Page ITIS3135
          </title>
     </head>
 
     <body>
         <main>
-            <div class="header">
+            <header class="header">
                 <h1>Create With David</h1>
                 <p>Combing computer science and art.</p>
-            </div>
+            </header>
             <div class="break"></div>
             <div class="container">
                 <div class="contact">
