--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-     <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+     <h1><a href="https://mavedave6.github.io/itis3135/index.html">David Udoeyop ITIS 3135</a></h1>
      <nav>
       <ul>
         <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
@@ -20,7 +20,7 @@
 
         <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
 
-        <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
+        <li><a href="https://mavedave6.github.io/itis3135/website_evaluations.html">Web_Evaluations</a></li>
     </ul>
     </nav>
     </header>
