--- a/itis3135/tables/tables.html
+++ b/itis3135/tables/tables.html
@@ -25,7 +25,7 @@
 
          <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
 
-         <li><a href="https://mavedave6.github.io/itis3135/web-e.html">Web_Evaluations</a></li>
+         <li><a href="https://mavedave6.github.io/itis3135/website_evaluations.html">Web_Evaluations</a></li>
      </ul>
      </nav>
      </header>
