--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,26 +7,13 @@
      <title>
        Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
      </title>
+     <script src="scripts/include.js"></script>
   </head>
   <body>
     <header>
-     <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
-     <nav>
-      <ul>
-        <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
-
-         <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
-
-         <li><a href="https://mavedave6.github.io/itis3135/website_evaluations.html">Web_Evaluations</a></li>
-    </ul>
-    </nav>
+    <div data-include="components/header.html"></div>
     </header>
+  </div>
     <main>
      <h2>Welcome to my website!</h2>
      <h2>It's that time of the year!</h2>
@@ -34,16 +21,7 @@
 
 
   <footer>
-   <a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a>
-   <a href="https://validator.w3.org/check?uri=referer"
-   id = "validation_link_html">
-    <img src="images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
-   </a>
-   <a href="https://jigsaw.w3.org/css-validator/check/referer"
-   id = "validation_link_css">
-    <img src="images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
-   </a>
-
+  <div data-include="components/footer.html"></div>
   </footer>
 
   </body>
