i need you all to work.

--- a/itis3135/intro.html
+++ b/itis3135/intro.html
@@ -12,22 +12,7 @@
 </head>
     <body>
         <header>
-          <h1><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
-          <nav>
-           <ul>
-             <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-
-             <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
-
-             <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
-
-             <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
-
-             <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
-
-              <li><a href="https://mavedave6.github.io/itis3135/website_evaluations.html">Web_Evaluations</a></li>
-         </ul>
-         </nav>
+          <div data-include="components/header.html"></div>
          </header>
             <main>
                 <h2>Introduction</h2>
@@ -50,7 +35,10 @@
                 <p>* STORY/ITEM: Mr. Von. I took your Introduction to Computer Science II class in my sophomore year and you made us do this same assignment then. I hadn't changed the contents of profile before today and redoing this felt like a really cringe time capsule experience. I literally had that mess of a bio for almost two years and I would've graduated without changing it if I didn't register for this class last minute.</p>
                 <p>* NotFromNc</p>
             </main>
-
+            <footer>
+              <div data-include="components/footer.html"></div>
+            </footer>
+            <script src="scripts/include.js"></script>
         </body>
 
 </html>
