--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -7,22 +7,7 @@
   </head>
   <body>
     <header>
-     <h1><a href="https://mavedave6.github.io/itis3135/index.html">David Udoeyop ITIS 3135</a></h1>
-     <nav>
-      <ul>
-        <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/tables/tables.html">Tables</a> </li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/forms/forms.html">Forms</a></li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
-
-        <li><a href="https://mavedave6.github.io/itis3135/website_evaluations.html">Web_Evaluations</a></li>
-    </ul>
-    </nav>
+     <div data-include="components/header.html"></div>
     </header>
     <main>
       <h1 class="h1">Website Evaluations</h1>
@@ -106,6 +91,10 @@
 
       </div>
     </main>
+    <footer>
+      <div data-include="components/footer.html"></div>
+    </footer>
+    <script src="scripts/include.js"></script>
   </body>
   <style>
     html{
