--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="styles/default.css" rel="stylesheet" type="text/css" >
+    <link href="../styles/default.css" rel="stylesheet" type="text/css" >
      <title>
        Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
      </title>
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <div data-include="components/header.html"></div>
+      <div data-include="./components/header.html"></div>
      </header>
         <main>
             <h2>Contract</h2>
@@ -23,9 +23,9 @@
             <p>Signed: <em>Udoeyop David</em>, 2/10/2022</p>
         </main>
         <footer>
-          <div data-include="components/footer.html"></div>
+          <div data-include="./components/footer.html"></div>
         </footer>
-        <script src="scripts/include.js"></script>
+        <script src="./scripts/include.js"></script>
     </body>
 
 </html>
