--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="styles/tablestyle.css" rel="stylesheet" type="text/css" >
-    <link href="styles/default.css" rel="stylesheet" type="text/css" >
+    <link href="../styles/tablestyle.css" rel="stylesheet" type="text/css" >
+    <link href="../styles/default.css" rel="stylesheet" type="text/css" >
      <title>
        Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
      </title>
