--- a/itis3135/hobby/misc.html
+++ b/itis3135/hobby/misc.html
@@ -8,9 +8,9 @@
 	<header>
 		<h1>Miscellaneous</h1>
 		<nav>
-			<a href="home.html">Home</a>
-			<a href="contact.html">All About Chess</a>
-			<a href="about.html">Misc</a>
+			<a href="https://mavedave6.github.io/itis3135/hobby/index.html">Home</a>
+			<a href="https://mavedave6.github.io/itis3135/hobby/allaboutchess.html">All About Chess</a>
+			<a href="https://mavedave6.github.io/itis3135/hobby/misc.html">Misc</a>
 		</nav>
 	</header>
 	<main>
