--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../styles/tablestyle.css" rel="stylesheet" type="text/css" >
-    <link href="../styles/default.css" rel="stylesheet" type="text/css" >
+    <link href="./styles/tablestyle.css" rel="stylesheet" type="text/css" >
+    <link href="./styles/default.css" rel="stylesheet" type="text/css" >
      <title>
        Abasiubong David Udoeyop ITIS3135 Red Hot Bell Peppers
      </title>
@@ -176,10 +176,15 @@
         <td>M</td>
       </tr>
 
-      <tr class="tr5">
+      <tr class="tr11" class="active-row" >
         <td>Ted Mosby</td>
         <td>22</td>
         <td>M</td>
+
+        <tr class="tr12" class="active-row2" >
+						<td colspan="2" headers="Position Name Email" class="active-row2">Average Age</td>
+						<td colspan="2" headers="Salary" class="active-row2">19.667</td>
+					</tr>
       </tr>
 
       </tbody>
