--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -62,6 +62,7 @@
 
     </fieldset>
     <input type="submit" value="submit" id="submit"/>
+    <input type="reset" value="reset" id="reset"/>
     </form>
     <footer>
       <div data-include="components/footer.html"></div>
