--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
-    <link rel="stylesheet" href="../styles/formstyles.css" />
-    <link href="../styles/default.css" rel="stylesheet" type="text/css" >
+    <link rel="stylesheet" href="./styles/formstyles.css" />
+    <link href="./styles/default.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
     <header>
