--- a/itis3135/createwithdavid.co/index.html
+++ b/itis3135/createwithdavid.co/index.html
@@ -6,34 +6,177 @@
          <title>
            Firm Page ITIS3135
          </title>
+
+         <style>
+         html{
+                 font-family: Tahoma, sans-serif;
+                 font-size: 20px;
+             }
+
+
+
+         body{
+
+             background-color: #6495ED;
+             margin:0;
+
+
+         }
+
+         .header{
+             background-color: #9FE2BF;
+             height: 120px;
+             width: 100%;
+             position: relative;
+
+         }
+
+         h1,h2{
+             padding-top: 8px;
+             margin-top: 0;
+
+         }
+         h1,p,h2{
+             padding-left: 15px;
+         }
+         p{
+             margin-top: -5px;
+         }
+         h2{
+             text-align: center;
+             font-size: 1.2rem;
+             margin-left: -15%;
+         }
+
+         .headimg{
+           position: absolute;
+           top: 5%;
+         }
+         h1{
+           margin-left: 2%;
+           font-size: 1.8rem;
+         }
+
+         .container{
+             background-color: #6495ED;
+             padding-bottom: 50PX;
+         }
+
+          .break{
+             height: 10px;
+             background-color: white;
+             padding: 0;
+             margin:0;
+             width:100%;
+
+          }
+          .input{
+           margin: auto;
+           width: 20%;
+           padding: 3px;
+
+          }
+          input,textarea{
+             height: 60px;
+             width: 200px;
+             border: 2px solid black;
+             border-radius: 8px;
+
+          }
+          .contact{
+             padding-top: 10%;
+          }
+          ::placeholder {
+           font-size: 17px;
+           padding: 5px;
+         }
+         textarea::placeholder{
+             font-size: 17px;
+
+         }
+         footer{
+           margin: auto;
+           background-color: #E74C3C;
+           width: 100%;
+           
+         }
+
+         .img1,.img2{
+               display: inline-block;
+               margin-left: auto;
+               margin-right: auto;
+         }
+         .intro-text{
+           text-align: center;
+         }
+         .intro{
+           margin:5%;
+         }
+         #submit{
+           width: 150px;
+           height: 50px;
+         }
+
+         </style>
     </head>
 
     <body>
-        <main>
+
             <header class="header">
+              <img src="../images/pepper.png" alt="" height="50" width="50" class="headimg">
                 <h1>Create With David</h1>
                 <p>Combing computer science and art.</p>
             </header>
             <div class="break"></div>
+            <main>
             <div class="container">
-                <div class="contact">
-                    <form>
-                        <h2>Contact Me</h2>
-                        <div class="input">
-                            <input type="text" placeholder="Name" name="Name">
-                        </div>
-                        <div class="input">
-                            <input type="text" class="email-bt" placeholder="Email" name="Name">
-                        </div>
-                        <div class="input">
-                            <textarea placeholder="Message..." rows="5"  name="Massage"></textarea>
-                        </div>
-                    </form>
+              <div class="intro">
+                <p class="intro-text">At Create With David, we specialize in creating visually stunning and user-friendly designs for businesses of all sizes.
+                   Our team of talented designers are eager to meet your every design need regardless of the field, be it fashion, tech, or marketing.
+                    We pride ourselves on our ability to translate our clients' visions into reality, whether it's through website design, logo creation, or packaging design.
+                     Our approach is collaborative and consultative, and we strive to exceed our clients' expectations on every project. We can't wait to work with you and bring your ideas to life!</p>
 
-                </div>
+                     <h4>Fun things you should know about our company:</h4>
+            <ul>
+                <li>It's named after our founder; David Udoeyop</li>
+                <li>We are really affordable. Like really.</li>
+                <li>We are client oriented and will use unorthodox approaches to make interactions fell less formal</li>
+                <li>We donate to charity</li>
+                <li>The company is growing at this very minute</li>
+            </ul>
+            <br>
+            <p>Let us help bring your imagination into fruition!</p>
+            <h4>Contact Us:</h4>
+            <p>Email: createwithdavid@createwithdavid.co</p>
+            <p>Phone Number: (571)356-6995</p>
+            <p>Address: 9201 University City Blvd, Charlotte, NC 28223</p>
+              </div>
+
+
 
             </div>
+            <div class="break"></div>
             <footer>
+              <div class="contact">
+                  <form>
+
+                      <div class="input">
+                        <h2>Contact Me(Personally)</h2>
+                          <input type="text" placeholder="Name" name="Name">
+                      </div>
+                      <div class="input">
+                          <input type="text" class="email-bt" placeholder="Email" name="Name">
+                      </div>
+                      <div class="input">
+                          <textarea placeholder="Message..." rows="5"  name="Massage"></textarea>
+                      </div>
+
+                      <div class="input">
+                          <input type="submit" value="submit" id="submit"/>
+                      </div>
+                  </form>
+
+              </div>
                 <a href="https://validator.w3.org/check?uri=referer"
                 id = "validation_link_html">
                  <img src="../images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."
@@ -51,97 +194,4 @@
 
 
 
-<style>
-html{
-        font-family: Tahoma, sans-serif;
-        font-size: 20px;
-    }
-
-
-
-body{
-
-    background-color: #6495ED;
-    margin:0;
-
-
-}
-
-.header{
-    background-color: #9FE2BF;
-    height: 120px;
-    width: 100%;
-
-}
-
-h1,h2{
-    padding-top: 8px;
-    margin-top: 0;
-
-}
-h1,p,h2{
-    padding-left: 15px;
-}
-p{
-    margin-top: -5px;
-}
-h2{
-    text-align: center;
-    font-size: 2rem;
-}
-
-.container{
-    background-color: #6495ED;
-    padding-bottom: 50PX;
-}
-
- .break{
-    height: 10px;
-    background-color: white;
-    padding: 0;
-    margin:0;
-    width:100%;
-
- }
- .input{
-  margin: auto;
-  width: 20%;
-  padding: 3px;
-
- }
- input,textarea{
-    height: 100px;
-    width: 400px;
-    border: 2px solid black;
-    border-radius: 8px;
-
- }
- .contact{
-    padding-top: 10%;
- }
- ::placeholder {
-  font-size: 17px;
-  padding: 5px;
-}
-textarea::placeholder{
-    font-size: 17px;
-
-}
-footer{
-  margin: auto;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-}
-
-.img1,.img2{
-      display: inline-block;
-      margin-left: auto;
-      margin-right: auto;
-
-
-}
-
-</style>
 </html>
