--- a/itis3135/accessibility/Udoeyop-Activity_Accessibility.html
+++ b/itis3135/accessibility/Udoeyop-Activity_Accessibility.html
@@ -7,7 +7,7 @@
   <meta name="Description" content="Testing website for accessibility.">
 
   <!-- css -->
-  <link rel="stylesheet" href="Activity_Accessibility.css">
+  <link rel="stylesheet" href="Udoeyop-Activity_Accessibility.css">
   <title>Test For Accessibility</title>
 
 </head>
