--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Linking the font -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -43,16 +43,16 @@
     <br>
     <h3>Bird Pictures</h3>
     <div id="images">
-        <img src="images/parrot.jpeg" id="image1" style="height: auto; width:320px;" alt="Parrot">
-        <img src="images/cardinal.jpeg" id="image2" style="height: auto; width:320px;" alt="Cardinal">
-        <img src="images/eagle.jpeg" id="image3" style="height: auto; width:320px;" alt="Eagle">
-        <img src="images/bluejay.jpeg" id="image4" style="height: auto; width:320px;" alt="Bluejay">
-        <img src="images/owl.jpeg" id="image5" style="height: auto; width:320px;" alt="Owl">
-        <img src="images/hummingbird.jpeg" id="image6" style="height: auto; width:320px;" alt="Hummingbird">
+        <img src="images/book1.jpg" id="image1" style="height: auto; width:320px;" alt="Parrot">
+        <img src="images/book2.jpg" id="image2" style="height: auto; width:320px;" alt="Cardinal">
+        <img src="images/book3.jpg" id="image3" style="height: auto; width:320px;" alt="Eagle">
+        <img src="images/book4.jpg" id="image4" style="height: auto; width:320px;" alt="Bluejay">
+        <img src="images/book5.jpg" id="image5" style="height: auto; width:320px;" alt="Owl">
+        <img src="images/book6.jpg" id="image6" style="height: auto; width:320px;" alt="Hummingbird">
     </div>
     <div id="arrow_buttons" style="text-align: center;">
-        <button style="width: 60px; font-size: 30px;" id="left-arrow">⇦</button>
-        <button style="width: 60px; font-size: 30px;" id="right-arrow">⇨</button>
+        <button style="width: 60px; font-size: 30px;" id="left-arrow"><</button>
+        <button style="width: 60px; font-size: 30px;" id="right-arrow">></button>
     </div>
 
   </main>
