--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -1,64 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="Styles/default.css" type="text/css">
-  <title> Zach Gazjuk | ITIS 3135 | Slideshow </title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <script src="jQuery/jquery-3.6.1.min.js"></script>
-  <script src="scripts/slideshow.js" type="text/javascript"></script>
-
-  <style>
-    #images {
-        position:relative;
-    }
-    #images img{
-        position:absolute;
-        top:0;
-        left:0;
-        display:none;
-    }
-
-    #images{
-        height: 300px;
-        width: 320px;
-        display: block;
-        margin-right: auto;
-        margin-left: auto;
-    }
-
-  </style>
-
+  <meta charset = "UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="styles\default.css" rel="stylesheet" type="text/css" >
+   <title>
+     Slideshow
+   </title>
+   <style>
+   	.slideshow-container {
+   		width: 400px;
+   		height: 400px;
+   		margin: 0 auto;
+   		position: relative;
+   		overflow: hidden;
+   	}
+   	.slideshow-image {
+   		width: 400px;
+   		height: 400px;
+   		position: absolute;
+   		top: 0;
+   		left: 0;
+   		transition: all 0.5s;
+   	}
+   	.prev, .next {
+   		cursor: pointer;
+   		position: absolute;
+   		top: 50%;
+   		width: auto;
+   		padding: 16px;
+   		margin-top: -50px;
+   		color: white;
+   		font-weight: bold;
+   		font-size: 20px;
+   		transition: 0.6s ease;
+   		border-radius: 0 3px 3px 0;
+   	}
+   	.next {
+   		right: 0;
+   		border-radius: 3px 0 0 3px;
+   	}
+   	.prev:hover, .next:hover {
+   		background-color: rgba(0,0,0,0.8);
+   	}
+   </style>
 </head>
 
 <body>
-  <div data-include="components/header.html"></div>
-
-  <main>
-    <h3>Activity #9 Slideshow</h3>
-    <br>
-    <h3>Bird Pictures</h3>
-    <div id="images">
-        <img src="images/book1.jpg" id="image1" style="height: auto; width:320px;" alt="Parrot">
-        <img src="images/book2.jpg" id="image2" style="height: auto; width:320px;" alt="Cardinal">
-        <img src="images/book3.jpg" id="image3" style="height: auto; width:320px;" alt="Eagle">
-        <img src="images/book4.jpg" id="image4" style="height: auto; width:320px;" alt="Bluejay">
-        <img src="images/book5.jpg" id="image5" style="height: auto; width:320px;" alt="Owl">
-        <img src="images/book6.jpg" id="image6" style="height: auto; width:320px;" alt="Hummingbird">
-    </div>
-    <div id="arrow_buttons" style="text-align: center;">
-        <button style="width: 60px; font-size: 30px;" id="left-arrow"><</button>
-        <button style="width: 60px; font-size: 30px;" id="right-arrow">></button>
-    </div>
-
-  </main>
-
+  <header>
+    
+  </header>
+  <header>
+    <div data-include="components/header.html"></div>
+  </header>
+<main>
+  <h2>Book Slideshow</h2>
+  <div class="slideshow-container">
+    <img src="images/book1.jpg" class="slideshow-image" id="current-image">
+    <img src="images/book2.jpg" class="slideshow-image">
+    <img src="images/book3.jpg" class="slideshow-image">
+    <img src="images/book4.jpg" class="slideshow-image">
+    <img src="images/book5.jpg" class="slideshow-image">
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+</main>
+<footer>
   <div data-include="components/footer.html"></div>
-  <script src="scripts/HTMLInclude.js"></script>
-</body>
+</footer>
+	<script>
+		var slideIndex = 1;
+		showSlides(slideIndex);
+		function plusSlides(n) {
+			showSlides(slideIndex += n);
+		}
+		function currentSlide(n) {
+			showSlides(slideIndex = n);
+		}
+		function showSlides(n) {
+			var i;
+			var slides = document.getElementsByClassName("slideshow-image");
+			if (n > slides.length) {slideIndex = 1}
+			if (n < 1) {slideIndex = slides.length}
+			for (i = 0; i < slides.length; i++) {
+				slides[i].style.display = "none";
+			}
+			slides[slideIndex-1].style.display = "block";
+			slides[slideIndex-1].id = "current-image";
+		}
+	</script>
 
+</body>
 </html>
