--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -48,7 +48,7 @@
 
 <body>
   <header>
-    
+
   </header>
   <header>
     <div data-include="components/header.html"></div>
@@ -89,6 +89,7 @@
 			slides[slideIndex-1].id = "current-image";
 		}
 	</script>
+  <script src="scripts/include.js"></script>
 
 </body>
 </html>
