--- a/itis3135/project/book.html
+++ b/itis3135/project/book.html
@@ -5,12 +5,12 @@
     <title></title>
 
 
-      <link rel="stylesheet" href="pagestyles.css">
+      <link rel="stylesheet" href="styles/pagestyles.css">
   </head>
   <body>
     <header>
 
-      <img id="logo" src="stack.png" alt="image of a stack of books" height="50px" width="40px">
+      <img id="logo" src="img/stack.png" alt="image of a stack of books" height="50px" width="40px">
       <h2 class="big-txt">Books</h2>
 
       <div class="navigation">
