--- a/itis3135/design.html
+++ b/itis3135/design.html
@@ -36,10 +36,10 @@
     </ul>
 
     <p style="text-align: center">Wireframe:</p>
-    <img src="images/Project.png" class="project-pic" alt="wireframe" height="300" width="400">
+    <img src="images/project.PNG" class="project-pic" alt="wireframe" height="300" width="400">
 
     <p style="text-align: center;">Site Map:</p>
-    <img src="mavedave6.github.io/itis3135/images/proj.PNG" class="project-pic" alt="site map" height="300" width="400">
+    <img src="images/proj.PNG" class="project-pic" alt="site map" height="300" width="400">
 
     <h3 class="leftAlign"><strong>Page Design:</strong></h3>
                 <ol>
