--- a/itis3135/head.html
+++ b/itis3135/head.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="styles/default.css">
+    <title>My Website</title>
+    <style>
+      header {
+        background-color: lightblue;
+        padding: 20px;
+        max-width: 100%;
+      }
+      nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      nav li {
+        margin: 0 10px;
+        margin-top: 2px;
+        text-align:center;
+      }
+      nav a, h1 a{
+        color: white;
+        text-decoration: none;
+      }
+      nav a:hover, a:hover {
+        color: lightgray;
+      }
+      h1{
+        text-align: center;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <header>
+      <h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+
       <nav>
-       <ul>
-         <li><h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1></li>
-         <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-
-         <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a> </li>
-
-         <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
-
-         <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
-
+        <ul>
+          <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
           <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
-
-          <li><a href=https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
+          <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
           <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
-          <li><a href="https://mavedave6.github.io/itis3135/calculator.html"></a>Calculator</li>
-          <li><a href="https://mavedave6.github.io/itis3135/crap.html"></a>Crap</li>
-          <li><a href="https://mavedave6.github.io/itis3135/firstscripts.html"></a>FirstScripts</li>
-          <li><a href="https://mavedave6.github.io/itis3135/Polygons.html"></a>Polygons</li>
+          <li><a href="https://mavedave6.github.io/itis3135/calculator.html">Calculator</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/crap.html">Crap</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/firstScripts.html">FirstScripts</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/polygons.html">Polygons</a></li>
           <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
-          <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</li>
+          <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
+          <li><a href="https://mavedave6.github.io/itis3135/design.html">Project_Design</a></li>
 
-     </ul>
-     </nav>
-
+        </ul>
+      </nav>
     </header>
-
-    <footer>
-    <a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a>
-    <a href="https://validator.w3.org/check?uri=referer"
-    id = "validation_link_html">
-     <img src="./images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
-    </a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer"
-    id = "validation_link_css">
-     <img src="/images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
-    </a>
-</footer>
   </body>
 </html>
