--- a/itis3135/hobby/allaboutchess.html
+++ b/itis3135/hobby/allaboutchess.html
@@ -71,7 +71,19 @@
 
 	</main>
 	<footer>
-	 Copyright My Website 2022
+		<nav>
+ 	   <ul>
+ 	     <li><a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a></li>
+ 	     <li><a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
+ 	       <img src="./images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+ 	     </a></li>
+ 	     <li><a href="https://jigsaw.w3.org/css-validator/check/referer"
+ 	     id = "validation_link_css">
+ 	      <img src="./images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+ 	     </a></li>
+ 	   </ul>
+ 	 </nav>
+
 	</footer>
 </body>
 </html>
