--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -2,38 +2,289 @@
 <html>
 <head>
 	<title>Hobby Website</title>
-	<link rel="stylesheet" href="style.css">
+  <style media="screen">
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+  }
+  header {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
+  .container{
+    padding-bottom: 10%;
+  }
+  footer {
+    background-color: black;
+    color: white;
+    padding: 5px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  nav a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    display: inline-block;
+  }
+  nav a:hover {
+    background-color: #555;
+  }
+  main {
+    padding: 20px;
+  }
+  .show{
+    margin-left: 0;
+  }
+  .videos{
+    display: flex;
+    justify-content: space-evenly;
+  }
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  nav li {
+    margin: 0 10px;
+
+    text-align:center;
+  }
+
+  </style>
+
+  <script>
+            let pageName = "";
+            function show(shown)
+            {
+                pageNameArray = document.getElementsByClassName("target");
+                for(let i = 0; i < pageNameArray.length; i++)
+                {
+                    if(pageNameArray[i].id == shown)
+                    {
+                        pageNameArray[i].style.display = "inherit";
+                    }
+                    else
+                    {
+                        pageNameArray[i].style.display = "none";
+                    }
+                }
+            }
+        </script>
 </head>
-<body>
+<body onload="show('home');">
 	<header>
 		<h1>Chess</h1>
 		<nav>
-			<a href="https://mavedave6.github.io/itis3135/hobby/index.html">Home</a>
-			<a href="https://mavedave6.github.io/itis3135/hobby/allaboutchess.html">All About Chess</a>
-			<a href="https://mavedave6.github.io/itis3135/hobby/misc.html">Misc</a>
+      <a href="#" onclick="show('home');">Home</a>
+      <a href="#" onclick="show('aac');">All About Chess</a>
+      <a href="#" onclick="show('misc');">Misc</a>
+
 		</nav>
 	</header>
 	<main>
-		<p>Chess is a two player board game played on a board with 64 squares.</p>
-			<img src="images/chess.jpg" alt="Chess Board" height="250px" width="250px"/>
+      <section id="home" class="target">
+        <div class="container">
+          <p>Chess is a two player board game played on a board with 64 squares.</p>
+            <img src="images/chess.jpg" alt="Chess Board" height="250px" width="250px"/>
 
-	<p>Each player has 16 pieces each;</p>
-		<ul>
-  <li>1 King</li>
-  <li>1 Queen</li>
-  <li>2 Rook</li>
-  <li>2 Knight</li>
-  <li>2 Bishop</li>
-  <li>8 Pawns</li>
-</ul>
-	<p>All the pieces on the board can be captured except the king. The goal of the game is to reach a stiuation whereby the King
-	has no moves i.e. checkmate.
-</p>
-	<p class="ru"><a href="#">Chess Rules</a></p>
+        <p>Each player has 16 pieces each;</p>
+          <ul>
+         <li>1 King</li>
+         <li>1 Queen</li>
+         <li>2 Rook</li>
+         <li>2 Knight</li>
+         <li>2 Bishop</li>
+         <li>8 Pawns</li>
+       </ul>
+        <p>All the pieces on the board can be captured except the king. The goal of the game is to reach a stiuation whereby the King
+        has no moves i.e. checkmate.
+       </p>
+        <p class="ru"><a href="#">Chess Rules</a></p>
+
+        </div>
+
+       </section>
+
+
+        <section id="aac" class="target">
+          <div class="container">
+
+            <p>
+              Chess has long been a popular board game, but in recent years, it has seen a significant increase in popularity.
+               This is due to a number of factors, the rise of top players like Magnus Carlsen, the growth of chess in education etc. However I think import
+               reall rose to peak engagement during the lockdown period. Everybody was getting into it; streamers, musicains, celeberities etc. There was
+               even a famous event for newcommers into the chess world called pogchamps. The whole boom lead to rise in popularity of chess films and shows such
+               the queens gambit and pawn sacrifice. There was overall a rapid increase in people that play/watch chess.
+             </p>
+
+             <h2>Professional Chess Variation</h2>
+             <p>
+               Professional chess players are tested by their prowess n different time modes and chess varaitions.
+               Examples of these time modes are;
+               <ul>
+                <li>Classical chess: widely considered as the most prestegious chess variation there is. It is usually the longest time controlled game
+                and the most credible because the  players have the longest time to think. </li>
+                <li>Rpid chess: A chess game that uses a time format of 60- 15 minutes per player.</li>
+                <li>Blitz chess: Also known as speed chess is a chess variation that uses a time format of 15-3 minutes per player. This is the most Interesting
+                kind of chess to watch becuase it is not as long as classical chess which can be up to 7 hours and it is not as short as bullet chess.</li>
+                <li>Bullet Chess: A chess variant in which time control is three minutes or less but is usually 1 minute. It leads to really fast and interesting games
+                but I don't like watching it because it's hard to keep up.</li>
+               </ul>
+
+               Shorter time-control games are usually the most entertaining type of chess to watch because the moves are fast paced and the games pass by more quickly than
+               longer ones e.g. classical games. But the longer ones are the true test of vigor and maneuverability and that is why they are the most credible. There are
+               other variants of chess that are fascinating but unoffical e.g. Chess 960, duck chess, etc.
+             </p>
+
+             <h2>Who is the best professional chess player?</h2>
+
+             <h3>Magnus Carlsen</h3>
+             <p>
+               Magnus Carlsen is handsdown the most talented chess player now and arguably of all time in my opinion. The reigning world chess champion has held the
+                the most prestegious chess title (classical world champion) five times and turned down the opportunity to defend it simply because he didn't want to.
+                He has been a beacon of admiration to his supporters and even adversaries. People who have played against him also speak highly of him.
+                Right now, there's noone close to him
+
+             </p>
+
+             <h3>Gary Kasparov</h3>
+             <p>
+               Also arguably the greatest chess player of all time. He was active between the years 1985-2000 winning the classical world chess championship
+               6 times in that period. He is widely considered as the most domiant chess player of all time. He passed that torch to magnus carlsen despite their 13
+               year differnece in active profesional chess because is the closest to being as dominant as kasparov was.
+             </p>
+
+             <h2>Most entertaining?</h2>
+             <p>I'd like to give that title to <a href="https://en.wikipedia.org/wiki/Bobby_Fischer">Bobby Fishcer</a>. Click the link and find out why.</p>
+
+
+          </div>
+
+        </section>
+
+        <section id="misc" class="target">
+
+          		<div class="container">
+
+          			<div class="chess-shows">
+          <p>All the pictures belw are interactive.</p>
+          	      <h3>Interesting chess TV shows/Movies</h3>
+
+
+          				<div class="show">
+          					<h3>The Queen's gambit.</h3>
+          					<a href="https://www.youtube.com/watch?v=dtD3FVJ37Rk" target="_blank"><img src="images\queen.jpeg" alt="Queen's gambit" height="180" width="180"></a>
+          					<p >The Queen's Gambit is a television miniseries that was released on Netflix in 2020. It is based on the novel of the same name by Walter Tevis.
+          						 The show follows the story of a young orphaned girl named Beth Harmon, who discovers a talent for chess and becomes a top-ranked player.</p>
+          				</div>
+
+          				<div class="show">
+          					<h4>Pawn Sacrifice.</h4>
+          					<a href="https://www.youtube.com/watch?v=xFHvH9FtACg" target="_blank"><img src="images\pawn.jpg" alt="Pawn Sacrifice" height="180" width="180"></a>
+          					<p>Pawn Sacrifice is a historical drama film released in 2015 that tells the story of Bobby Fischer,
+          						a legendary chess player who became the youngest grandmaster in history at the age of 15.
+          						The film follows Fischer's rise to fame and his tumultuous personal life as he prepares to take
+          						 on the Soviet Union's top chess player, Boris Spassky, in the 1972 World Chess Championship.
+          The film explores Fischer's obsession with chess and his struggles with mental illness,
+          including his paranoia and erratic behavior. It also delves into the political tensions between the United States
+           and the Soviet Union during the Cold War, as Fischer's match with Spassky becomes a proxy for the two superpowers' ideological and cultural differences.</p>
+          				</div>
+
+          	    </div>
+          			<div class="chess-streamers">
+
+          				<h3>Popular chess streamers and youtubers</h3>
+          				<div class="streamer">
+          					<h4>Gothamchess.</h4>
+          					<a href="https://www.youtube.com/@GothamChess" target="_blank"><img src="images\gothamchess.png" alt="Gothamchess" height="160" width="180"></a>
+          					<p>GothamChess is an international master from new york city. He is the biggest chess streamer/youtuber in the world and he is responsble for
+          					some interesting chess content like guess the elo and chess for dummies.</p>
+          				</div>
+
+          				<div class="streamer">
+          					<h4>The Botez Sisters.</h4>
+          					<a href="https://www.youtube.com/@BotezLive" target="_blank"><img src="images\botez.png" alt="Botez sisters" height="160" width="180"></a>
+          					<p>The Botez sisters are Canadian-Ameican chess streamers born to romanian parents. They decided to really start making chess videos in
+          					covid and it really paid of.</p>
+          				</div>
+
+          				<div class="streamer">
+          					<h4>Hikaru Nakamura.</h4>
+          					<a href="https://www.youtube.com/@GMHikaru" target="_blank"><img src="images\hikaru.jpg" alt="Hikaru" height="160" width="180"></a>
+          					<p >Hikaru Nakamura is a chess grandmaster and the number 1 speed chess player in the world. He's really entertaining to watch because of
+          						just how better he is at chess than everyone else.</p>
+          				</div>
+
+          				<div class="streamer">
+          					<h4>Anna Cramling.</h4>
+          					<a href="https://www.youtube.com/@AnnaCramling" target="_blank"><img src="images\anna.jpeg" alt="Anna" height="160" width="180"></a>
+          					<p>Anna Cramling is a female chess streamer born to two grandmasters. Being born to two grandmasters, she as a really god understanding
+          					of the game and her parents feature in some of her videos.</p>
+          				</div>
+
+          				<p>Honorable mentions are Eric Rosen, AKA nemsko, daily dose of chess, etc.</p>
+
+          			</div>
+
+          			<div class="chess-content">
+
+          				<h3>Chess Videos I like</h3>
+          				<div class="videos">
+          					<div class="video">
+          					<a href="https://www.youtube.com/watch?v=6UUjOrBfrXo" target="_blank"><img src="images\vid1.jpg" alt="video" height="160" width="180"></a>
+          					</div>
+
+          					<div class="video">
+          					<a href="https://www.youtube.com/watch?v=Qb9IWtLOnzo" target="_blank"><img src="images\vid2.jpg" alt="video" height="160" width="180"></a>
+          					</div>
+
+          					<div class="video">
+          					<a href="https://www.youtube.com/watch?v=ZOrLfEZav14" target="_blank"><img src="images\vid3.jpg" alt="video" height="160" width="180"></a>
+          					</div>
+          				</div>
+
+
+          			</div>
+
+          			<h3>Where do I go to chess?</h3>
+          			<ul>
+          				<li> <a href="https://www.chess.com/home" target="_blank">Chess.com</a> </li>
+          				<li> <a href="https://lichess.org/" target="_blank">Lichess</a> </li>
+          			</ul>
+          			<p>You can start your journey towards chess mastery on those two sites!</p>
+
+          		</div>
+
+        </section>
+
+
+
+
+
 
 	</main>
 	<footer>
-		Copyright My Website 2022
+		<nav>
+ 	   <ul>
+ 	     <li><a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a></li>
+ 	     <li><a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
+ 	       <img src="./images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+ 	     </a></li>
+ 	     <li><a href="https://jigsaw.w3.org/css-validator/check/referer"
+ 	     id = "validation_link_css">
+ 	      <img src="./images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+ 	     </a></li>
+ 	   </ul>
+ 	 </nav>
+
 	</footer>
 </body>
 </html>
