--- a/itis3135/hobby/misc.html
+++ b/itis3135/hobby/misc.html
@@ -15,9 +15,6 @@
 	</header>
 	<main>
 
-
-
-
 		<div class="container">
 
 			<div class="chess-shows">
@@ -112,7 +109,19 @@ including his paranoia and erratic behavior. It also delves into the political t
 
 	</main>
 	<footer>
-		Copyright My Website 2022
+		<nav>
+ 	   <ul>
+ 	     <li><a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a></li>
+ 	     <li><a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
+ 	       <img src="./images/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+ 	     </a></li>
+ 	     <li><a href="https://jigsaw.w3.org/css-validator/check/referer"
+ 	     id = "validation_link_css">
+ 	      <img src="./images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+ 	     </a></li>
+ 	   </ul>
+ 	 </nav>
+
 	</footer>
 </body>
 </html>
