--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -92,6 +92,8 @@
 	<main>
       <section id="home" class="target">
         <div class="container">
+          <h2>Home</h2>
+          <br>
           <p>Chess is a two player board game played on a board with 64 squares.</p>
             <img src="images/chess.jpg" alt="Chess Board" height="250px" width="250px"/>
 
@@ -116,6 +118,9 @@
 
         <section id="aac" class="target">
           <div class="container">
+
+            <h2>All About Chess</h2>
+            <br>
 
             <p>
               Chess has long been a popular board game, but in recent years, it has seen a significant increase in popularity.
@@ -173,6 +178,9 @@
         <section id="misc" class="target">
 
           		<div class="container">
+
+                <h2>Miscellaneous</h2>
+                <br>
 
           			<div class="chess-shows">
           <p>All the pictures belw are interactive.</p>
