--- a/itis3135/activity10.html
+++ b/itis3135/activity10.html
@@ -1,82 +1,44 @@
+
 <!DOCTYPE HTML>
 <html lang="en">
 
 <head>
 	<meta charset="UTF-8">
     <title>Image Swap</title>
-    <link rel="stylesheet" href="Styles/default.css">
-	<script src="jQuery/jquery-3.6.1.min.js"></script>
-    <script src="scripts/activity10.js"></script>
-    <style >
-      h1, h2, ul, p {
-    margin: 0;
-    padding: 0;
-}
-
-h1 {
-    padding-bottom: .25em;
-}
-
-h2 {
-    font-size: 120%;
-    padding: .5em 0 .25em;
-}
-
-li {
-    padding-right: 10px;
-    display: inline;
-}
-
-ul{
-    text-align: center;
-}
-
-.flower{
-    width: 75px;
-    height: auto;
-
-}
-    </style>
+	<link rel="stylesheet" href="styles/Activity10.css" />
+	<link rel="stylesheet" href="styles/default.css">
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="scripts/Activity10.js"></script>
 </head>
 
 <body>
-  <header>
-    <div data-include="components/header.html"></div>
-  </header>
-
-
+	<header>
+		<div data-include="components/header.html"></div>
+	</header>
 	<main>
-		<br>
-		<br>
-		<h1>Pictures of Beautiful Flowers</h1>
-		<br>
+		<h1>Flowers</h1>
 	    <ul id="image_list">
 	        <li><a href="images/flower1.jpg" title="Flower 1">
-	        	<img src="images/flower1.jpg" alt="" class="flower"></a></li>
+	        	<img src="images/flower1.jpg" alt="" height="75" width="75"></a></li>
 	        <li><a href="images/flower2.jpg" title="Flower 2">
-	        	<img src="images/flower2.jpg" alt="" class="flower"></a></li>
+	        	<img src="images/flower2.jpg" alt="" height="75" width="75"></a></li>
 	        <li><a href="images/flower3.jpg" title="Flower 3">
-	        	<img src="images/flower3.jpg" alt="" class="flower"></a></li>
+	        	<img src="images/flower3.jpg" alt="" height="75" width="75"></a></li>
 	        <li><a href="images/flower4.jpg" title="Flower 4">
-	        	<img src="images/flower4.jpg" alt="" class="flower"></a></li>
+	        	<img src="images/flower4.jpg" alt="" height="75" width="75"></a></li>
 	        <li><a href="images/flower5.jpg" title="Flower 5">
-	        	<img src="images/flower5.jpg" alt="" class="flower"></a></li>
+	        	<img src="images/flower5.jpg" alt="" height="75" width="75"></a></li>
 	        <li><a href="images/flower6.jpg" title="Flower 6">
-	        	<img src="images/flower6.jpg" alt="" class="flower"></a></li>
+	        	<img src="images/flower6.jpg" alt="" height="75" width="75"></a></li>
 	    </ul>
-		<br>
-	    <h2 id="caption"Flowers</h2>
-		<br>
-	    <p><img src="images/activity10_images/mount-everest.webp" alt="" style="width: 600px; height: auto;" id="image" class="imgcenter"></p>
-		<br>
-		<br>
+	    <h2 id="caption">Flower 1</h2>
+	    <p><img src="images/flower1.jpg" alt="" id="image"></p>
 	</main>
 
-  <footer>
-      <div data-include="components/footer.html"></div>
-  </footer>
-
-    <script src="scripts/HTMLInclude.js"></script>
-
+	<footer>
+		<br/>
+	<div data-include="components/footer.html"></div>
+	</footer>
+	<script src="scripts/include.js"></script>
 </body>
 </html>
