--- a/itis3135/review.html
+++ b/itis3135/review.html
@@ -5,7 +5,19 @@
     <title>Peer Reviews</title>
     <link href="styles\default.css" rel="stylesheet" type="text/css" >
     <style>
-
+      h3{
+        text-align: center;
+        font-size:20px;
+      }
+      #image{
+        width:450px;
+        height:320px;
+        display:block;
+        margin:auto;
+      }
+      a{
+        color:black;
+      }
     </style>
   </head>
   <body>
@@ -17,10 +29,10 @@
       <div class="container">
         <h2>Peer Reviews</h2>
     <br>
-    <p style="text-align: center; font-size: 25px;">Jacob Harland</p>
+    <h3>Jacob Harland</h3>
 
-    <img class="imgcenter" src="images/kens_website.png" style="width: 600px; height: auto;">
-    <p style="text-align: center;"><a href="https://kgerrishuncc.github.io/itis3135/introduction.html">Ken's ITIS 3135 Intoduction Page</a></p>
+    <img id="image" src="images/jh.PNG">
+    <h3><a href="https://jacobharland.github.io/itis3135/tables.html" target="_blank">Jacob Harland Intoduction Page</a></h3>
     <ul>
         <li>Beautifully designed. I like the side bar touch; it's differnt and it stands out from all lot of the other websites.</li>
         <li>Color schemes, fonts, spacing are consistent amongst webpages and sections within webapages.</li>
@@ -36,9 +48,9 @@
     </p>
     <br>
     <br>
-    <p style="text-align: center; font-size: 25px;">Bryant De Luna-Peralta</p>
-    <img class="imgcenter" src="images/joes_website.png" style="width: 600px; height: auto;">
-    <p style="text-align: center;"><a href="https://joe-ee.github.io/itis3135/">Joe's ITIS 3135 Homepage</a></p>
+    <h3>Bryant De Luna-Peralta</h3>
+    <img id="image"  src="images/bryan.PNG">
+    <h3><a href="https://bryantd0208.github.io/itis3135/introduction.html" target="_blank">Bryant's Homepage</a></h3>
     <ul>
         <li>Color scheme in this website is outstanding; really making html color codes work for you huh.</li>
         <li>TI like the little images used to represent footer links. A little nice gesture that goes a long way.</li>
