--- a/itis3135/review.html
+++ b/itis3135/review.html
@@ -31,7 +31,7 @@
     <br>
     <h3>Jacob Harland</h3>
 
-    <img id="image" src="images/jh.PNG">
+    <img id="image" src="images/Jh.PNG">
     <h3><a href="https://jacobharland.github.io/itis3135/tables.html" target="_blank">Jacob Harland Intoduction Page</a></h3>
     <ul>
         <li>Beautifully designed. I like the side bar touch; it's differnt and it stands out from all lot of the other websites.</li>
