--- a/itis3135/project/search.html
+++ b/itis3135/project/search.html
@@ -14,8 +14,8 @@
   <input type="text" id="search-term" placeholder="Enter a title or author">
   <button type="submit">Search</button>
    </form>
-  
-    <div id="search-results"></div>
+
+    <div id="book-result" class="book-result"></div>
     <div id="book-details"></div>
 
     </main>
