--- a/itis3135/project/search.html
+++ b/itis3135/project/search.html
@@ -12,11 +12,9 @@
   </head>
   <body>
     <main>
-      <form id="search-form">
-        <input type="text" id="query" placeholder="Search for a book">
-        <button type="submit" onclick="search()">Search</button>
-      </form>
-      <div id="results"></div>
+      <h1>Software and Information Systems Faculty</h1>
+
+ 		<div id="faculty"></div>
 
     </main>
   </body>
