--- a/itis3135/project/about.html
+++ b/itis3135/project/about.html
@@ -2,10 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>About Page</title>
     <link rel="stylesheet" href="styles/about.css">
   </head>
   <body>
+    <header>
+      <div class="navigation">
+      <nav role="navigation" class="navigation-items">
+        <a href="https://mavedave6.github.io/itis3135/project/index.html">Home</a>
+        <a href="https://mavedave6.github.io/itis3135/project/book.html"> Books</a>
+        <a href="https://mavedave6.github.io/itis3135/project/incoming.html"> Incoming</a>
+        <a href="https://mavedave6.github.io/itis3135/project/about.html"> About</a>
+        </nav>
+      </div>
+    </header>
     <div id="about-banner">
       <div id="about-banner-text">
         <h1>Welcome to D-Collections</h1>
