--- a/itis3135/project/index.html
+++ b/itis3135/project/index.html
@@ -8,15 +8,16 @@
   <body>
     <div class="navigation">
       <nav role="navigation" class="navigation-items">
-        <a href="#about">Home</a>
-        <a href="#books"> Books</a>
-        <a href="#contact"> About</a>
+        <a href="https://mavedave6.github.io/itis3135/project/index.html">Home</a>
+        <a href="https://mavedave6.github.io/itis3135/project/book.html"> Books</a>
+        <a href="https://mavedave6.github.io/itis3135/project/incoming.html"> Incoming</a>
+        <a href="https://mavedave6.github.io/itis3135/project/about.html"> About</a>
       </nav>
     </div>
 
       <div class="big-text"><h1>D-Collection</h1> <br></div>
       <div class="big-text-des"><p>Books I've read and so should you!</p>
-      <div class="explore"><a href="#">Explore</a></div>
+      <div class="explore"><a href="https://mavedave6.github.io/itis3135/project/book.html">Explore</a></div>
       </div>
 
       <div class="newsletter-div">
