--- a/itis3135/project/search.html
+++ b/itis3135/project/search.html
@@ -12,9 +12,11 @@
   </head>
   <body>
     <main>
-      <h1>Software and Information Systems Faculty</h1>
-
- 		<div id="books"></div>
+      <form id="search-form">
+     <input type="text" id="query" placeholder="Search for a book">
+     <button type="submit" onclick="search()">Search</button>
+   </form>
+   <div id="books"></div>
 
     </main>
   </body>
