--- a/itis3135/project/book.html
+++ b/itis3135/project/book.html
@@ -15,9 +15,10 @@
 
       <div class="navigation">
       <nav role="navigation" class="navigation-items">
-          <a href="#about">Home</a>
-          <a href="#books"> Books</a>
-          <a href="#contact"> About</a>
+        <a href="https://mavedave6.github.io/itis3135/project/index.html">Home</a>
+        <a href="https://mavedave6.github.io/itis3135/project/book.html"> Books</a>
+        <a href="https://mavedave6.github.io/itis3135/project/incoming.html"> Incoming</a>
+        <a href="https://mavedave6.github.io/itis3135/project/about.html"> About</a>
         </nav>
       </div>
     </header>
